# grpc-java

./: java_grpc_library.bzl  repositories.bzl
examples/: BUILD.bazel
protobuf-lite/: BUILD.bazel
services/: BUILD.bazel
